--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="">Contact</a>
                 </div>
                 <div class="login-button">
-                    <a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
+                    <a href="#"><i class="fas fa-sign-in-alt"></i> Login</a>
                 </div>
             </nav>
             <section class="banner-section flexible-content">
@@ -53,166 +53,106 @@
                     <div class="card-details">
                         <h1>Neymar Jr.</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Neymar came into prominence at Santos, where he made his professional debut aged 17. He helped the club win two successive Campeonato Paulista championships, a Copa do , and the UEFA Champions League, and finished third for the FIFA Ballon  Final.</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-2.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Lionel Messi.</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">An Argentine international, Messi is both his country's highest appearance-maker and their all-time leading goalscorer. At youth level, he won the 2005 FIFA World Youth Championship, finishing the tournament with bto play and score in a FIFA  August 2011, he led Argentina to three consecutive finals: the 2014 FIFA World Cup, for which he won the Golden Ball, and the 2015 and 2016 Copa </p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-3.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Cristiano Ronaldo</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Born and raised in Madeira, Ronaldo began his senior club career playing for Sporting CP, before signing with Manchester United in 2003, aged 18, winning the e, and the FIFA Club World Cup; at age 23, he won his first Ballon d'Or. Ronaldo was the subject of the then-most expensive association football transfer when he signed for Real Madrid in 2009 in a transfer worth €94 million (£80 million), where he won 15 trop</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-4.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Paulo Dybala.</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team. where he established himself as one of the world's best young players and won a Serie B title. In 2015, Dybala signed fo</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-5.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Mesut Ozil .</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Mesut Özil (German pronunciation: [ˈmeːzut ˈøːzil], Turkish: [meˈsut œˈzil]; born 15 October 1988) is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King",[2][3][4][5][6][7] Özil is known for his technical skills, creativity, agility, and finesse.[8] He has also played as a wide midfielder in his career.</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-6.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Mauro Icardi</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.Icardi began his footballing career at La Masia, the youth system of La Liga club </p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-7.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Di Maria.</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.Di María began his career with Rosario Central, but came into prominence at Benfica after signing for the club in 2007, aged 19. He helped Benfica win a Primeira Liga championship, the club's fi</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-8.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Kylian Mbappé.</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team. Mbappé began his senior career with Ligue 1 club Monaco, making his professional debut in 2015, aged 16. With them, he won a Ligue 1 title, Ligue 1 Young Player of the Year, and the Golden Boy award. In 2017, he signed for league rivals Paris Saint-Germain on an initial loan, which was made permanent in 2018 in a transfer worth €180 mi</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-9.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Mohamed Salah.</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Mohamed Salah Hamed Mahrous Ghaly  is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team. Considered one of the best players in the world,[6][7] he is known for his finishing, dribbling, and speed.</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-10.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Harry Kane</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Born and raised in the London borough of Waltham Forest, Kane began his career at Tottenham Hotspur, where, after fast progression through the team's youth academy, he was promoted to the senior team in 2009, at age 16. He did not initially feature for the side, and was loaned out several times to clubs across the English football pyramid, inc</p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-11.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Kevin De Bruyne</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team. He is one of just three </p>
                 </div>
                 <div class="image-card">
                     <div class="image-card-banner">
                         <img src="images/players/player-12.png">
                     </div>
                     <div class="card-details">
-                        <h1>Neymar Jr.</h1>
+                        <h1>Philippe Coutinho</h1>
                     </div>
-                    <p class="cards-p">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a
-                        Brazilian
-                        professional
-                        footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national
-                        team.
-                        He is widely regarded as one of the best players in the world.</p>
+                    <p class="cards-p">Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. He is known for his combination of vision, passing, dribbling and ability to conjure curving long-range strikes.Born and raised in Rio de Janeiro, Coutinho sho</p>
                 </div>
             </div>
         </main>
